--- a/2dmango/2dmango/2dmango.vcxproj.filters
+++ b/2dmango/2dmango/2dmango.vcxproj.filters
@@ -152,6 +152,12 @@
     <ClCompile Include="Util\PolygonUtil.cpp">
       <Filter>Util</Filter>
     </ClCompile>
+    <ClCompile Include="Util\LineUtil.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Entity\FindConnectedPoints.cpp">
+      <Filter>Entity</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="mango2d.h">
@@ -227,6 +233,9 @@
     </ClInclude>
     <ClInclude Include="Util\PolygonUtil.h">
       <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\LineUtil.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
