--- a/2dmango/2dmango/2dmango.vcxproj
+++ b/2dmango/2dmango/2dmango.vcxproj
@@ -83,6 +83,7 @@
     <ClCompile Include="Entity\DesignData.cpp" />
     <ClCompile Include="Entity\DesignDataWrapper.cpp" />
     <ClCompile Include="Entity\FindConnectedPoints.cpp" />
+    <ClCompile Include="Entity\FindPoint.cpp" />
     <ClCompile Include="Entity\HotRegionImpl.cpp" />
     <ClCompile Include="Entity\LineData.cpp" />
     <ClCompile Include="Entity\PointData.cpp" />
