--- a/2dmango/2dmango/2dmango.vcxproj
+++ b/2dmango/2dmango/2dmango.vcxproj
@@ -13,11 +13,13 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{B12702AD-ABFB-343A-A199-8E24837244A3}</ProjectGuid>
     <Keyword>Qt4VSv1.0</Keyword>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <PlatformToolset>v140</PlatformToolset>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -89,6 +91,7 @@
     <ClCompile Include="Entity\PointData.cpp" />
     <ClCompile Include="Entity\RoomData.cpp" />
     <ClCompile Include="Entity\WallData.cpp" />
+    <ClCompile Include="Entity\WallPath.cpp" />
     <ClCompile Include="GeneratedFiles\Debug\moc_actionnavgationwidget.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
@@ -174,6 +177,7 @@
     <ClInclude Include="Entity\PointData.h" />
     <ClInclude Include="Entity\RoomData.h" />
     <ClInclude Include="Entity\WallData.h" />
+    <ClInclude Include="Entity\WallPath.h" />
     <ClInclude Include="GeneratedFiles\ui_mango2d.h" />
     <ClInclude Include="Geometry\AuxiliaryLineGeometry.h" />
     <ClInclude Include="Geometry\BaseGeometry.h" />
