--- a/2dmango/2dmango/2dmango.vcxproj.filters
+++ b/2dmango/2dmango/2dmango.vcxproj.filters
@@ -179,6 +179,9 @@
     <ClCompile Include="Geometry\WindowGeometry.cpp">
       <Filter>Geometry</Filter>
     </ClCompile>
+    <ClCompile Include="Geometry\PenFactory.cpp">
+      <Filter>Geometry</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="mango2d.h">
@@ -278,6 +281,9 @@
     </ClInclude>
     <ClInclude Include="const.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Geometry\PenFactory.h">
+      <Filter>Geometry</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
