--- a/2dmango/2dmango/2dmango.vcxproj
+++ b/2dmango/2dmango/2dmango.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Geometry\InnerWallGeometry.cpp" />
     <ClCompile Include="Geometry\MoveDoorGeometry.cpp" />
     <ClCompile Include="Geometry\PenFactory.cpp" />
+    <ClCompile Include="Geometry\RoomGeometry.cpp" />
     <ClCompile Include="Geometry\SingleDoorGeometry.cpp" />
     <ClCompile Include="Geometry\WallGeometry.cpp" />
     <ClCompile Include="Geometry\WindowGeometry.cpp" />
@@ -154,6 +155,7 @@
     <ClCompile Include="mango2d.cpp" />
     <ClCompile Include="Util\LineUtil.cpp" />
     <ClCompile Include="Util\PolygonUtil.cpp" />
+    <ClCompile Include="Util\VectorUtil.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="mango2d.h">
@@ -182,6 +184,7 @@
   <ItemGroup>
     <ClInclude Include="ActionAdpater\BaseActionAdapter.h" />
     <ClInclude Include="ActionAdpater\DefaultActionAdapter.h" />
+    <ClInclude Include="Util\VectorUtil.h" />
     <CustomBuild Include="ActionAdpater\DrawWallActionAdapter.h">
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Moc%27ing DrawWallActionAdapter.h...</Message>
@@ -211,6 +214,7 @@
     <ClInclude Include="Geometry\InnerWallGeometry.h" />
     <ClInclude Include="Geometry\MoveDoorGeometry.h" />
     <ClInclude Include="Geometry\PenFactory.h" />
+    <ClInclude Include="Geometry\RoomGeometry.h" />
     <ClInclude Include="Geometry\SingleDoorGeometry.h" />
     <ClInclude Include="Geometry\WallGeometry.h" />
     <ClInclude Include="Geometry\WindowGeometry.h" />
