--- a/2dmango/2dmango/2dmango.vcxproj.filters
+++ b/2dmango/2dmango/2dmango.vcxproj.filters
@@ -203,6 +203,9 @@
     <ClCompile Include="Entity\ModelData.cpp">
       <Filter>Entity</Filter>
     </ClCompile>
+    <ClCompile Include="Util\JsonUtil.cpp">
+      <Filter>Util</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="mango2d.h">
@@ -320,6 +323,9 @@
     </ClInclude>
     <ClInclude Include="Entity\ModelData.h">
       <Filter>Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\JsonUtil.h">
+      <Filter>Util</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
