--- a/2dmango/2dmango/2dmango.vcxproj.filters
+++ b/2dmango/2dmango/2dmango.vcxproj.filters
@@ -435,5 +435,11 @@
     <ClInclude Include="Geometry\CeilingGeometry.h">
       <Filter>Geometry</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="2dmango.rc" />
   </ItemGroup>
 </Project>
